# StellwerkQt

./: .gitignore  .qmake.stash  BU.cpp  BU.h  Block.cpp  Block.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Connector.cpp  Connector.h  HSignal.cpp  HSignal.h  HSignalQPushButton.cpp  HSignalQPushButton.h  Makefile  README.md  Spmemory.cpp  Spmemory.h  StellwerkQPushButton.cpp  StellwerkQPushButton.h  StellwerkQt.pro  Stellwerkstechnik.cpp  Stellwerkstechnik.h  VSignal.h  Vsignal.cpp  WSignal.cpp  WSignal.h  WSignalQPushButton.cpp  WSignalQPushButton.h  Weiche.cpp  Weiche.h  WeicheQPushButton.cpp  WeicheQPushButton.h  clickmanager.cpp  clickmanager.h  filemanager.cpp  filemanager.h  main.cpp  main_TEST.cpp  (+19 more)
WiringPi/wiringPi/: wiringPi.c
desktop/: README.md  StellwerkQt.desktop  StellwerkQt.sh
